ImageCapture: don't list |torch| in Capabilities if not supported

Currently MediaStreamTrack.getCapabilities() returns
 torch : false

when |torch| is not supported; this CL aligns with the
other dictionary members behaviour, which is to not
show up in the Capabilities dictionary when not supported.

BUG=712719

Review-Url: https://codereview.chromium.org/2827693003
Cr-Commit-Position: refs/heads/master@{#465373}

Former-commit-id: 31b31da235decd6c593745e98f77b55ff9270cb4